--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Excursion</title>
   <link rel="stylesheet" href="./resources/css/reset.css">
   <link rel="stylesheet" href="./resources/css/style.css">
   <meta charset="UTF-8">
 </head>
 <body>
+	<header>
+		<div>
+		  <h1>Discover hidden places in the world around you</h1>
+		  <p><a href="#"></a>Download Excursion (Coming soon!)</p>
+		</div>
+	</header>
 </body>
 </html>
