--- a/index.html
+++ b/index.html
@@ -7,11 +7,45 @@
   <meta charset="UTF-8">
 </head>
 <body>
+
 	<header>
 		<div>
 		  <h1>Discover hidden places in the world around you</h1>
-		  <p><a href="#"></a>Download Excursion (Coming soon!)</p>
+		  <p><a href="#">Download Excursion (Coming soon!)</a></p>
 		</div>
 	</header>
+	<div class='main-content'>
+
+	  <!-- section where we place the video inside the phone -->
+	  <div id = 'phone-video-section'>
+	  	<div class='video-container'>
+	  		<img src="./resources/images/excursion.mp4">
+	  	</div>
+	  </div>
+	
+
+
+	  <!-- personal travel guide section	 -->
+	  <div id='personal-travel-guide'>
+	  	<h1>Your personal travel guide</h1>
+	  	<h2>Excursion remember places you like, and new points of interest around you.</h2>
+	  	<img src="./resources/images/camp.webp">
+	  </div>
+
+
+	  <!-- Iphone and android section -->
+	  <div id='andriod-iphone'>
+	    <img src="./resources/images/phone.webp">
+	    <h1>Coming Soon for Iphone and Android</h1>	
+	    <p><a href="#">Download Excursion (Coming soon!)</a></p>
+	  </div>
+
+
+	  <!-- footer -->
+	  <footer>
+	  	<h2>Excursion</h2>
+	  </footer>
+
+	</div>
 </body>
 </html>
