video and copyright added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Excursion</title>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
   <link rel="stylesheet" href="./resources/css/reset.css">
   <link rel="stylesheet" href="./resources/css/style.css">
   <meta charset="UTF-8">
@@ -19,7 +20,8 @@
 	  <!-- section where we place the video inside the phone -->
 	  <div id = 'phone-video-section'>
 	  	<div class='video-container'>
-	  		<img src="./resources/images/excursion.mp4">
+	  		<video>
+	  			<source src="./resources/images/excursion.mp4" type="video/mp4">
 	  	</div>
 	  </div>
 	
@@ -43,6 +45,7 @@
 
 	  <!-- footer -->
 	  <footer>
+	  	<i class="fa f1f9"></i>
 	  	<h2>Excursion</h2>
 	  </footer>
 
