more css changes made

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	  <!-- section where we place the video inside the phone -->
 	  <div id = 'phone-video-section'>
 	  	<div class='video-container'>
-	  		<video>
-	  			<source src="./resources/images/excursion.mp4" type="video/mp4">
+	  		<video  autoplay>
+	  		<source src="./resources/images/excursion.mp4" type="video/mp4">
 	  	</div>
 	  </div>
 	
