--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Excursion</title>
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
   <link rel="stylesheet" href="./resources/css/reset.css">
   <link rel="stylesheet" href="./resources/css/style.css">
   <meta charset="UTF-8">
@@ -20,7 +20,7 @@
 	  <!-- section where we place the video inside the phone -->
 	  <div id = 'phone-video-section'>
 	  	<div class='video-container'>
-	  		<video  autoplay>
+	  		<video  autoplay muted loop>
 	  		<source src="./resources/images/excursion.mp4" type="video/mp4">
 	  	</div>
 	  </div>
@@ -45,7 +45,7 @@
 
 	  <!-- footer -->
 	  <footer>
-	  	<i class="fa f1f9"></i>
+	  	<i class="fas fa-copyright"></i>
 	  	<h2>Excursion</h2>
 	  </footer>
 
